// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`undoRedo 1`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
}
`;

exports[`undoRedo 2`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 1,
  },
}
`;

exports[`undoRedo 3`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
}
`;

exports[`undoRedo 4`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 2,
  },
}
`;

exports[`undoRedo 5`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
}
`;

exports[`undoRedo 6`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 3,
  },
}
`;

exports[`undoRedo 7`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Redo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "REDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
  },
}
`;

exports[`undoRedo 8`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 2,
  },
}
`;

exports[`undoRedo 9`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Redo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "REDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
  },
}
`;

exports[`undoRedo 10`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 1,
  },
}
`;

exports[`undoRedo 11`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Redo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "REDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
  },
}
`;

exports[`undoRedo 12`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 2,
  },
}
`;

exports[`undoRedo 13`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
}
`;

exports[`undoRedo 14`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 3,
  },
}
`;

exports[`undoRedo 15`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Redo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "REDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
  },
}
`;

exports[`undoRedo 16`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 2,
  },
}
`;

exports[`undoRedo 17`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
}
`;

exports[`undoRedo 18`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 3,
  },
}
`;

exports[`undoRedo 19`] = `
Object {
  "d": Object {
    "index": 200,
    "type": "MENU_ITEM",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Undo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".0",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "UNDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Redo",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  undefined,
                  "REDO",
                  undefined,
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "d": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
  },
}
`;

exports[`undoRedo 20`] = `
Object {
  "d": Object {
    "type": "VALUE",
    "value": 2,
  },
}
`;
